# ansible-collection-roles

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  README.md  codecov.yml  galaxy.yml  pyproject.toml  requirements.yml
.github/: clear-up-hetzner.py
.github/workflows/: ansible-test.yml  cleanup.yml  extra-docs-linting.yml  molecule-test.yml  pytest.yml
changelogs/: config.yaml
example_inventory/: hosts.ini
example_inventory/group_vars/k8s_all/: vars.yml
example_inventory/group_vars/k8s_all_control_plane_nodes/: vars.yml
example_inventory/group_vars/k8s_all_initial_control_plane_nodes/: vars.yml
example_inventory/group_vars/k8s_all_worker_nodes/: vars.yml
meta/: runtime.yml
playbooks/: base.yml  k8s-base.yml  k8s-mycluster.yml
pytest_snapshot/interfaces2networkd/: snapshot_hetzner_root_config  snapshot_hetzner_root_files  snapshot_hetzner_root_interfaces  snapshot_hetzner_root_rendered  snapshot_hetzner_vm_config  snapshot_hetzner_vm_files  snapshot_hetzner_vm_interfaces  snapshot_hetzner_vm_rendered
roles/apt_repo_docker/: README.md
roles/apt_repo_helm/: README.md
roles/apt_repo_kubernetes/: README.md
roles/base/: README.md
roles/containerd/: README.md
roles/kubeadm_base/: README.md
roles/kubeadm_controlplane/: README.md
roles/kubeadm_master/: README.md
roles/kubeadm_node/: README.md
roles/kubernetes_base/: README.md
roles/kubernetes_flux/: README.md
roles/upgrade_host/: README.md
sample_inventory/: hosts.ini
tests/pytest/: test_interfaces2networkd.py
tests/sanity/: ignore-2.19.txt
(+147 files in other folders)
